# bp-sdk

./: .coverage  .env.example  .gitignore  BLUEPRINT_CREATION_SUMMARY.md  CLAUDE.md  ENHANCEMENT-PLAN.md  PRIOR_AUTH_SUMMARY.txt  backlog.md  create_compliance_agent.py  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  vercel.json
.claude/: BLUEPRINT-AUTOMATION.md  memories.md  settings.json
.claude/commands/: bp-architect.md  bp-create.md  bp-doctor.md  bp-eval.md  bp-linear.md  bp-sync.md
api/: __init__.py  config.py  main.py
api/models/: __init__.py  chat.py  hitl.py  session.py
api/routes/: __init__.py  builder.py  chat.py  health.py  sessions.py
api/services/: __init__.py  blueprint.py  hitl.py  inference.py  session.py  yaml_store.py
bp_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: ARCHITECTURE.md  IMPROVEMENT_SUGGESTIONS.md  MODERNIZATION_ANALYSIS.md  SCHEMA_GATES_PROPOSAL.md  SDK_ENHANCEMENT_PROPOSAL.md
e2e/: enhancements.spec.ts  fixtures.ts  guided-chat.spec.ts  journey.spec.ts  review-screen.spec.ts  stage-navigation.spec.ts  yaml-session.spec.ts
e2e/integration/: journey.spec.ts
e2e/mocks/: api-mock.ts  builder-api-mock.ts
roadmap/: README.md  blueprint-map.yaml  projects.csv  report.csv  report.md
scripts/: add_blueprints_to_linear.py  create-readme-agent.py  deploy_meta_agents.py  deploy_ui_agents.py  find_corrupt_blueprint.py  find_corrupt_blueprints.py  find_problematic_blueprints.py  pagos_defensive_patch.diff  publish_managers_to_marketplace.py  recreate_deleted_agents.py  update-builder-agent.py  update_fintech_alumni_agents.py  update_ui_agents_model.py
sdk/: __init__.py  client.py  exceptions.py  models.py
sdk/api/: __init__.py  agent.py  blueprint.py  http.py  marketplace.py
sdk/builders/: __init__.py  payload.py  tree.py
sdk/cli/: __init__.py  config.py  main.py
sdk/utils/: __init__.py  sanitize.py  validation.py
sdk/yaml/: __init__.py  converter.py  ids.py  loader.py  models.py  writer.py
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  (+1 more)
tests/: __init__.py  test_api_blueprint.py  test_api_quirks.py  test_builders.py  test_cli.py  test_client.py  test_crud_sequences.py  test_exceptions.py  test_models.py  test_new_operations.py  test_sanitize.py  test_yaml.py
(+435 files in other folders)
